--- a/html/adminpage.html
+++ b/html/adminpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Booking</title>
+  <title>Adventure Park | Admin Booking</title>
   <link rel="stylesheet" href="../css/booking.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
@@ -21,6 +21,7 @@
 
   <div id="content">
 
+
     <div id="booking-box">
       <!--  <button id="pbCreateTimeTable">Vælg Dag</button> -->
       <div class="col-lg-12" style="margin-top:10px;">
@@ -33,9 +34,10 @@
       </div>
     </div>
 
+
     <div class="bview-div">
       <table id="bview-table" class="bview-table">
-        <th colspan="3">Booking Overview</th>
+        <!--<th colspan="3">Booking Overview</th>-->
         <tr>
           <th>Booking Id</th>
           <th>Activity</th>
@@ -45,10 +47,9 @@
         </tr>
       </table>
     </div>
+    </div>
 
 
-
-  </div>
 </div>
 <script src="../js/admin.js"></script>
 <script src="../js/js.js"></script>
