--- a/html/contact.html
+++ b/html/contact.html
@@ -74,6 +74,20 @@
   </div>
 </div>
 
+
+<footer id="footer">
+  <div id="footerstay">
+    <ul>
+      <li><img src="../images/PRULogo.png" height="118" width="158"/>made by Programmers R Us</li>
+      <li><a href="contact.html">Kontakt</a></li>
+      <li>Mail: Something@gmail.com</li>
+      <li>tlf: +45 42 04 20 69</li>
+      <li>Adresse: Guldbergsgade xx</li>
+    </ul>
+  </div>
+</footer>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="../js/js.js"></script>
 </body>
