--- a/html/booking.html
+++ b/html/booking.html
@@ -47,6 +47,19 @@
 
   </div>
 </div>
+
+<footer id="footer">
+  <div id="footerstay">
+    <ul>
+      <li><img src="../images/PRULogo.png" height="118" width="158"/>made by Programmers R Us</li>
+      <li><a href="contact.html">Kontakt</a></li>
+      <li>Mail: Something@gmail.com</li>
+      <li>tlf: +45 42 04 20 69</li>
+      <li>Adresse: Guldbergsgade xx</li>
+    </ul>
+  </div>
+</footer>
+
 <script src="../js/js.js"></script>
 <script src="../js/booking.js"></script>
 <script src="../js/fetch_activites.js"></script>
