--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Confirmation page</title>
-  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/booking.css">
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
 </head>
-<body>
+<body style="height: 100vh">
 <div class="allback-book">
 <div id="header" class="header"></div>
 
@@ -26,6 +25,18 @@
   </p>
 </div>
 </div>
+
+<footer id="footer">
+  <div id="footerstay">
+    <ul>
+      <li><img src="../images/PRULogo.png" height="118" width="158"/>made by Programmers R Us</li>
+      <li><a href="contact.html">Kontakt</a></li>
+      <li>Mail: Something@gmail.com</li>
+      <li>tlf: +45 42 04 20 69</li>
+      <li>Adresse: Guldbergsgade xx</li>
+    </ul>
+  </div>
+</footer>
 
 <script src="../js/js.js"></script>
 </body>
