--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Confirmation page</title>
+  <link rel="stylesheet" href="../css/confirmation.css">
   <link rel="stylesheet" href="../css/booking.css">
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
 </head>
-<body style="height: 100vh">
+<body>
 <div class="allback-book">
 <div id="header" class="header"></div>
 
@@ -18,10 +19,10 @@
   <p class="lead"><strong>Se din mail inbox</strong> for yderligere informationer omkring din bestilling.</p>
   <hr>
   <p>
-    Har du problemer? <a href="">Kontakt os</a>
+    Har du problemer? <a href="contact.html" style="color: white">Kontakt os</a>
   </p>
   <p class="lead">
-    <a class="btn btn-primary btn-sm" href="index.html" role="button">Tilbage til forsiden</a>
+    <a class="button-50" href="index.html" role="button">Tilbage til forsiden</a>
   </p>
 </div>
 </div>
