--- a/html/adminpage.html
+++ b/html/adminpage.html
@@ -61,7 +61,7 @@
 </div>
 <script src="../js/js.js"></script>
 <script src="../js/admin.js"></script>
-<script src="../js/booking.js"></script>
+<script src="../js/fetch_activites.js"></script>
 
 </body>
 </html>
