--- a/html/form.html
+++ b/html/form.html
@@ -81,7 +81,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="../js/js.js"></script>
 <script src="../js/customer.js"></script>
-<script src="../js/booking.js"></script>
+<script src="../js/fetch_activites.js"></script>
 <script src="../bootstrap-5.1.3-dist/js/bootstrap.js"></script>
 
 <footer id="footer">
